feat(help): enhance help output with kubectl integration
- Add kubectl help integration for all commands `get, describe, apply, delete`
- Implement section separation with "Original kubectl <section_name>:" headers
- Add kubectl-multi examples before original kubectl examples
- Add flag implementation warning for unimplemented features
- Show both kubectl-multi and original kubectl usage

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,9 @@ Thumbs.db
 # Kubernetes config (keep examples but not real configs)
 kubeconfig
 *.kubeconfig 
+
+# Local AI prompt files
+.cursor_prompts/
+
+# Local dev notes
+.dev_notes/
